# Wizard_Chess_MCU_0

./: .gitignore  Board_State_Default.txt  Board_State_Nameless.txt  CMakeLists.txt  ESP32_CHESS_README.md  add_compile_commands.py  partitions.csv  platformio.ini  position_lookup_generator.py  pytest_hello_world.py  sdkconfig.defaults  update_board_fix.c
checkpoint_backup_working_capture_zones/: CHECKPOINT_INFO.txt  esp_chess_main.cc.backup
main/: BoardStateTracker.hh  BoardStates.hh  CMakeLists.txt  ChessAI.cc  ChessAI.hh  ChessBoard.cc  ChessBoard.hh  ChessPiece.hh  KingPiece.cc  KingPiece.hh  KnightPiece.cc  KnightPiece.hh  PathAnalyzer.cc  PathAnalyzer.hh  PawnPiece.cc  PawnPiece.hh  QueenPiece.hh  RookPiece.cc  SimpleAI.cc  convert_board_states.py  esp_chess_main.cc  hello_world_main.c  main.cc  main.cpp  main_game.cc
src/: BishopPiece.cc  BishopPiece.hh  BoardStateTracker.cc  BoardStateTracker.hh  BoardStates.hh  Chess.h  ChessAI.cc  ChessAI.hh  ChessBoard.cc  ChessBoard.hh  ChessPiece.cc  PathAnalyzer.cc  PathAnalyzer.hh  PinDefs.h  QueenPiece.cc  RookPiece.hh  SimpleAI.cc  audio.cpp  audio.hpp  captureSound.hpp  convert_board_states.py  hello_world_main.c  led_strip_rmt.h  led_strip_spi.h  leds.cpp  leds.hpp  main.cpp  main_game.cc  main_test.cc  motionPos.cpp  motionPos.h  move_queue.cpp  move_queue.h  ota_server.cpp  ota_server.hpp  path.h  reed.cpp  reed.hpp  step_timer.h  tone.hpp
